@@ -7,12 +7,14 @@ EXTRA_DIST = \
 	blockfault.stderr.exp blockfault.vgtest \
 	mremap.stderr.exp mremap.stderr.exp-glibc27 mremap.stdout.exp \
 	    mremap.vgtest \
-	mremap2.stderr.exp mremap2.stdout.exp mremap2.vgtest
+	mremap2.stderr.exp mremap2.stdout.exp mremap2.vgtest \
+	mremap3.stderr.exp mremap3.stdout.exp mremap3.vgtest
 
 check_PROGRAMS = \
 	blockfault \
 	mremap \
-	mremap2
+	mremap2 \
+	mremap3
 
 
 AM_CFLAGS   += $(AM_FLAG_M3264_PRI)
